<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_deep"
    tools:showIn="navigation_view">

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu"
                android:title="Menu" />
        </menu>
    </item>

    <item android:title="" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_datos_gas"
            android:icon="@drawable/ic_graph_metano_green"
            android:title="@string/menu_graph_gas" />
        <item
            android:id="@+id/nav_datos_tem"
            android:icon="@drawable/ic_graph_tem_green"
            android:title="@string/menu_graph_temp" />
        <item
            android:id="@+id/nav_datos_presion"
            android:icon="@drawable/ic_graph_presion_green"
            android:title="@string/menu_graph_pressure" />

    </group>

    <item android:title="" />

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_white"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
