<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/spacing_small"
    app:cardElevation="@dimen/spacing_xsmall">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        android:background="@color/gray_300">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/ai_section_title"
            android:textSize="@dimen/text_size_lg"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/spacing_large" />

        <!-- Activar/Desactivar IA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/spacing_medium">
            <TextView
                android:id="@+id/text_ia_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_weight="1"
                android:text="@string/ai_toggle"
                android:textSize="@dimen/text_size_s"/>
            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_ia_voz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_spinner_tone"/>
        </LinearLayout>

        <!-- Volumen -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/spacing_medium">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/ai_volume"
                android:textSize="@dimen/text_size_s"/>
            <SeekBar
                android:id="@+id/seek_bar_volumen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_large"
                android:progress="50"
                android:contentDescription="@string/desc_spinner_tone"/>
            <TextView
                android:id="@+id/text_volumen_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ai_volume_value"
                android:textSize="@dimen/text_size_s"/>
        </LinearLayout>

        <!-- Voz -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/spacing_medium">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/ai_choose_voice"
                android:textSize="@dimen/text_size_s"/>

            <Spinner
                android:id="@+id/spinner_ia_voz"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_xxlarge"
                android:contentDescription="@string/desc_spinner_tone"
                android:entries="@array/tipos_de_voz"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <!-- Tono -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/ai_choose_tone"
                android:textSize="@dimen/text_size_s"/>
            <Spinner
                android:id="@+id/spinner_tono_voz"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_xxlarge"
                android:entries="@array/tonos_de_voz"
                android:contentDescription="@string/desc_spinner_tone"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
<uses-permission android:name="android.permission.INTERNET" />
<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
