<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/spacing_small"
    app:cardElevation="@dimen/spacing_xsmall">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium"
        android:background="@color/gray_300">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/users_section_title"
            android:textSize="@dimen/text_size_lg"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/spacing_medium" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_usuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:background="@color/gray_300"
            app:tabTextColor="@color/black"
            app:tabSelectedTextColor="@color/teal_deep"
            app:tabIndicatorColor="@color/teal_deep">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/users_tab_active" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/users_tab_blocked" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_height="wrap_content"
                android:text="@string/users_tab_all" />
        </com.google.android.material.tabs.TabLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_usuarios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/sec_item_user_admin"
            tools:itemCount="3" />
    </LinearLayout>
</androidx.cardview.widget.CardView>