<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alerta_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_light"
    tools:context=".ui.user.AlertsActivity">

    <include
        android:id="@+id/waveform_section"
        layout="@layout/wave_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/alerta"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_medium" />

    <ImageView
        android:id="@+id/alerta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_icon_alert"
        android:src="@drawable/img_user_alert"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/alerta_title"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/alerta_title"
        style="@style/TextAppearance.AlertaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/sensor_alert"
        app:layout_constraintTop_toBottomOf="@+id/alerta"
        app:layout_constraintBottom_toTopOf="@id/ia_text_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ia_text_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_large"
        app:cardBackgroundColor="@color/orange_light"
        app:cardCornerRadius="@dimen/spacing_medium"
        app:cardElevation="@dimen/spacing_xsmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alerta_title"
        app:layout_constraintBottom_toTopOf="@id/button_message">

        <TextView
            android:id="@+id/ia_response_text"
            style="@style/TextAppearance.AlertaBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:text="@string/sensor_waiting_data" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:background="@drawable/btn_border_white_bg_green"
        app:backgroundTint="@null"
        android:paddingTop="@dimen/spacing_medium"
        android:paddingBottom="@dimen/spacing_medium"
        android:text="@string/common_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_l"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintTop_toBottomOf="@id/ia_text_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />
</androidx.constraintlayout.widget.ConstraintLayout>