<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_admin"
    android:paddingBottom="@dimen/spacing_medium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/header_background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_small"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/img_header_screen_main"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />
    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="@dimen/spacing_xlarge"
        android:layout_height="@dimen/spacing_xlarge"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_large"
        android:contentDescription="@string/desc_icon_settings"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="@dimen/spacing_xlarge"
        android:layout_height="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:contentDescription="@string/desc_icon_user"
        android:src="@drawable/ic_user_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_title"
        android:layout_width="119dp"
        android:layout_height="29dp"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_small"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/admin_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_l"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/user_icon"
        app:layout_constraintEnd_toStartOf="@+id/user_icon"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toEndOf="@id/settings_icon"
        app:layout_constraintTop_toTopOf="@+id/user_icon"
        app:layout_constraintVertical_bias="1.0" />

    <include
        android:id="@+id/waveform_section"
        layout="@layout/wave_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>